@@ -5,10 +5,12 @@
     + Autotest and unit_diff are both unbuffered. Results are more live.
     + Refactored and redesigned how files map to test from Sean Carley. See fixtures plugin as an example.
     + Generalize how autotest handler is instantiated and invoked, allowing for many more autotest types, including combos.
-+ 16 minor enhancements:
++ 18 minor enhancements:
     + Added "stolen" rspec_autotest from caldersphere.net
     + Added :all_good hook if initial run was all_good as well.
+    + Added :run_command hook to trigger the start of a test run.
     + Added assert_in_epsilon to ZentestAssertions.
+    + Added autotest plugin to auto-update source ala tinderbox/cruisecontrol.
     + Added autotest plugin to update ichat/adium IM status with code stats.
     + Added autotest plugin to update the GNU screen statusbar from Yuichi Tateno.
     + Added autotest syntax error handling from Ryan Platte.
